adds animation for button

--- a/front-end/src/styles/Nav.scss
+++ b/front-end/src/styles/Nav.scss
@@ -10,7 +10,7 @@
 
       &::after {
           width: 80%;
-      }
+      } 
   }
     &::after {
       position: absolute;
@@ -18,7 +18,7 @@
       left: 0;
       right: 0;
       margin: auto;
-      background-color: white;
+      background-color: #00CED1;
       color: transparent;
       width: 0%;
       content: ".";
