--- a/front-end/src/styles/HomePage.scss
+++ b/front-end/src/styles/HomePage.scss
@@ -1,5 +1,6 @@
 .home-text {
   color: white;
+  line-height: 1.2;
   h5 {
     font-family: 'PT Mono', monospace;
   }
@@ -7,7 +8,6 @@
 
 
   //SPLIT TEXT
-
 
 span span {
   position: relative;
