adds sticky nav, adds about border

--- a/front-end/src/styles/About.scss
+++ b/front-end/src/styles/About.scss
@@ -1,13 +1,17 @@
 .about-container {
   color: white;
   font-family: Montserrat;
-  
-  h1 {
-  &.title {
-    color: #e8e8e8;
-    font-weight: 700;
-    text-transform: uppercase;
-    font-size: calc(30px + (50 - 30) * ((100vw - 300px) / (1600 - 300)) );;
+  // max-width: 95% !important;
+  // padding: 50px 50px;
+  // border: 1px rgba(255, 255, 255, 0.5) solid;
+  // height: 70vh;
+  max-width: 95%;
+  .border {
+    border: 1px rgba(255, 255, 255, 0.5) solid;
+    padding: 75px 50px 50px;
   }
-}
+
+
+  
+
 }
