--- a/front-end/src/styles/General.scss
+++ b/front-end/src/styles/General.scss
@@ -17,3 +17,29 @@
   font-weight: 700;
 }
 
+.list-circle {
+  list-style: circle;
+}
+
+.uppercase {
+  text-transform: uppercase;
+}
+
+.center-col {
+  display: table;
+  margin: auto;
+}
+
+h1 {
+  &.title {
+    color: #e8e8e8;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: calc(30px + (50 - 30) * ((100vw - 300px) / (1600 - 300)) );;
+  }
+}
+
+
+
+
+
