adds scroll from buttons and nav

--- a/front-end/src/styles/About.scss
+++ b/front-end/src/styles/About.scss
@@ -5,6 +5,7 @@
   // padding: 50px 50px;
   // border: 1px rgba(255, 255, 255, 0.5) solid;
   // height: 70vh;
+  margin-top: 20px;
   max-width: 95%;
   .border {
     border: 1px rgba(255, 255, 255, 0.5) solid;
