--- a/front-end/src/styles/Nav.scss
+++ b/front-end/src/styles/Nav.scss
@@ -12,6 +12,9 @@
     color: white;
     position: relative;
     padding: 1rem 1.5rem;
+    &:focus {
+      color: white;
+    }
     &:hover {
       color: rgb(245, 245, 245);
 
