--- a/front-end/src/styles/Contact.scss
+++ b/front-end/src/styles/Contact.scss
@@ -1,3 +1,15 @@
 .contact-container {
   margin-top: 150px;
+  margin-bottom: 200px;
+
+}
+
+.contact-input{
+  input, textarea {
+    width: 100%;
+  }
+
+  textarea {
+    height: 100px;
+  }
 }
