--- a/front-end/src/styles/Projects.scss
+++ b/front-end/src/styles/Projects.scss
@@ -10,6 +10,14 @@
     opacity: 0.6;
     padding: 3rem 3rem 2rem;
     text-align: left;
+
+    .github-icon {
+      transform: scale(2.5);
+      margin-left: 30px;
+      &:hover {
+        color: #008d8f;
+      }
+    }
     
   }
 }
