--- a/front-end/src/styles/Contact.scss
+++ b/front-end/src/styles/Contact.scss
@@ -1,15 +1,30 @@
 .contact-container {
-  margin-top: 150px;
+  margin-top: 200px;
   margin-bottom: 200px;
+
+  .contact-text {
+    color: white; 
+    font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
+    margin-bottom: 25px;
+  }
 
 }
 
 .contact-input{
   input, textarea {
     width: 100%;
+    background-color: #909da2;
+  }
+  input {
+    height: 40px;
+    margin-bottom: 30px;
   }
 
   textarea {
-    height: 100px;
+    height: 120px;
+  }
+  ::placeholder {
+    color: black;
   }
 }
